Fix button as inline

--- a/css/skyos/core.css
+++ b/css/skyos/core.css
@@ -153,7 +153,7 @@ button {
 .button.inline a,
 .button.inline a:visited,
 .button.inline a:active {
-  height: none;
+  height: auto;
   display: inline-block;
 }
 
