--- a/css/skyos/responsive.css
+++ b/css/skyos/responsive.css
@@ -71,6 +71,9 @@
     max-width: none;
     width: calc(100% - var(--row-padding, 15px));
   }
+  #support .row {
+    width: 90%;
+  }
   #support .row.flex {
     display: block;
   }
