Adjust style of support tab on the homepage

--- a/css/skyos/core.css
+++ b/css/skyos/core.css
@@ -10,7 +10,7 @@
   --color-gray: #51626B;
   --color-darker-gray: #46545C;
   --color-lighter-gray: #E1EFF5;
-  --color-error-red: #B35D54;
+  --color-error-red: #c55050;
   --color-info-blue: var(--color-primary);
   --color-warning-yellow: #EBE9A2;
 
